embedding youtube videos

--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -46,8 +46,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orga5de7e1">
-<h2 id="orga5de7e1">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgdf0cb2f">
+<h2 id="orgdf0cb2f">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -66,7 +66,9 @@ introduction to the Python programming language and apply it some
 simple chemical engineering problems.
 </p>
 
+
 <p>
+&#x2014;
 Python is a powerful programming language that is&#x2026; widely used across
 many fields and industries.  
 </p>
@@ -138,8 +140,8 @@ to as far you want to go.
 </section>
 </section>
 <section>
-<section id="slide-org938da52">
-<h2 id="org938da52">Overview</h2>
+<section id="slide-org089a662">
+<h2 id="org089a662">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -148,16 +150,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org1fe018a">
-<h3 id="org1fe018a">Python</h3>
+<section id="slide-org6c2feaa">
+<h3 id="org6c2feaa">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org996b356">
-<h3 id="org996b356">Jupyter notebooks</h3>
+<section id="slide-orgff3d845">
+<h3 id="orgff3d845">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -170,23 +172,24 @@ We will implement this using Jupyter notebooks.
 </aside>
 
 </section>
-<section id="slide-org1f1ed11">
-<h3 id="org1f1ed11">Installation</h3>
+<section id="slide-org738b911">
+<h3 id="org738b911">Installation</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org0b212e1">
-<h2 id="org0b212e1">Basics</h2>
-<div class="outline-text-2" id="text-org0b212e1">
+<section id="slide-org9303860">
+<h2 id="org9303860">Basics</h2>
+<div class="outline-text-2" id="text-org9303860">
 </div>
 </section>
-<section id="slide-orgc2ed540">
-<h3 id="orgc2ed540">Python as a calculator</h3>
+<section id="slide-org066ccaf">
+<h3 id="org066ccaf">Python as a calculator</h3>
 <div>
-<video height="500" controls>
-<source  src="../recordings/python-calculator.mp4" type="video/mp4" />
-</video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!---video height="500" controls>
+<source  src="../recordings/python-calculator.mp4" type="video/mp4">
+</video--->
 </div>
 
 <div>
@@ -198,8 +201,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-orgbe56bdf">
-<h3 id="orgbe56bdf">variables</h3>
+<section id="slide-orgff6b7fa">
+<h3 id="orgff6b7fa">variables</h3>
 <ul>
 <li>integers</li>
 <li>floats</li>
@@ -210,12 +213,13 @@ for more details.
 </ul>
 
 </section>
-<section id="slide-org2e7486c">
-<h3 id="org2e7486c">Example using variables</h3>
+<section id="slide-org1cda1cc">
+<h3 id="org1cda1cc">Example using variables</h3>
 <div>
-<video height="500" controls>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!---video height="500" controls>
 <source  src="../recordings/python-variables.mp4" type="video/mp4" />
-</video>
+</video--->
 </div>
 
 <div>
@@ -228,11 +232,11 @@ for more details.
 
 
 </section>
-<section id="slide-orgfe16025">
-<h3 id="orgfe16025">Strings</h3>
+<section id="slide-org1bb21b2">
+<h3 id="org1bb21b2">Strings</h3>
 </section>
-<section id="slide-orge050d87">
-<h3 id="orge050d87">printing</h3>
+<section id="slide-orgec7f58e">
+<h3 id="orgec7f58e">printing</h3>
 <p>
 print('Hello')
 </p>
@@ -242,8 +246,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org3072fd4">
-<h3 id="org3072fd4">Lists</h3>
+<section id="slide-orgb988844">
+<h3 id="orgb988844">Lists</h3>
 <ul>
 <li>comprehensions</li>
 <li>indexing
@@ -283,8 +287,8 @@ x_list.append(137.0)
 </div>
 
 </section>
-<section id="slide-org683ac4d">
-<h3 id="org683ac4d">Dictionaries</h3>
+<section id="slide-orgf6db733">
+<h3 id="orgf6db733">Dictionaries</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -302,8 +306,8 @@ x_list.append(137.0)
 
 
 </section>
-<section id="slide-orga870485">
-<h3 id="orga870485">loops</h3>
+<section id="slide-orga8bea25">
+<h3 id="orga8bea25">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
@@ -311,8 +315,8 @@ repetitive tasks.
 
 
 </section>
-<section id="slide-orgbe57e18">
-<h3 id="orgbe57e18">Functions</h3>
+<section id="slide-orga62d73c">
+<h3 id="orga62d73c">Functions</h3>
 <p>
 Often, we find that we 
 </p>
@@ -322,12 +326,12 @@ The key
 </p>
 
 </section>
-<section id="slide-org4494f98">
-<h3 id="org4494f98">Conditionals</h3>
+<section id="slide-org1b7007e">
+<h3 id="org1b7007e">Conditionals</h3>
 
 </section>
-<section id="slide-org06d4fe5">
-<h3 id="org06d4fe5">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-org04b6971">
+<h3 id="org04b6971">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -402,8 +406,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-org6fae365">
-<h2 id="org6fae365">Importing libraries</h2>
+<section id="slide-org45c2f71">
+<h2 id="org45c2f71">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -420,8 +424,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-orgd5c24b0">
-<h3 id="orgd5c24b0">numpy</h3>
+<section id="slide-org330dd90">
+<h3 id="org330dd90">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -452,8 +456,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org499a457">
-<h3 id="org499a457">importing numpy</h3>
+<section id="slide-orgad69d13">
+<h3 id="orgad69d13">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -481,8 +485,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-orga152be7">
-<h3 id="orga152be7">matplotlib / pylab</h3>
+<section id="slide-orgc77784f">
+<h3 id="orgc77784f">matplotlib / pylab</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -505,8 +509,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgf71e50b">
-<h3 id="orgf71e50b">scipy</h3>
+<section id="slide-orgf8b82ed">
+<h3 id="orgf8b82ed">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -517,8 +521,8 @@ nil
 
 
 </section>
-<section id="slide-org6f89ff1">
-<h3 id="org6f89ff1">sympy</h3>
+<section id="slide-orgb1fefeb">
+<h3 id="orgb1fefeb">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -533,8 +537,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org557db42">
-<h3 id="org557db42">sympy</h3>
+<section id="slide-org1af50e7">
+<h3 id="org1af50e7">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -547,16 +551,16 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org5eba8b9">
-<h2 id="org5eba8b9">Further resources</h2>
+<section id="slide-orgf8afbc0">
+<h2 id="orgf8afbc0">Further resources</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-org5834284">
-<h2 id="org5834284">Summary</h2>
+<section id="slide-org4993134">
+<h2 id="org4993134">Summary</h2>
 </section>
 </section>
 </div>
