embedding video using planet estream

--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -46,8 +46,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org630e052">
-<h2 id="org630e052">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgac5ac22">
+<h2 id="orgac5ac22">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -140,8 +140,8 @@ to as far you want to go.
 </section>
 </section>
 <section>
-<section id="slide-orgfac0084">
-<h2 id="orgfac0084">Overview</h2>
+<section id="slide-orgb5afb0a">
+<h2 id="orgb5afb0a">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -150,16 +150,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-orgc103e76">
-<h3 id="orgc103e76">Python</h3>
+<section id="slide-org5cc0572">
+<h3 id="org5cc0572">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org7921763">
-<h3 id="org7921763">Jupyter notebooks</h3>
+<section id="slide-org6cc7e29">
+<h3 id="org6cc7e29">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -172,21 +172,22 @@ We will implement this using Jupyter notebooks.
 </aside>
 
 </section>
-<section id="slide-org84d3f21">
-<h3 id="org84d3f21">Installation</h3>
+<section id="slide-org3f15bb4">
+<h3 id="org3f15bb4">Installation</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org9e9ad6b">
-<h2 id="org9e9ad6b">Basics</h2>
-<div class="outline-text-2" id="text-org9e9ad6b">
+<section id="slide-org58885f5">
+<h2 id="org58885f5">Basics</h2>
+<div class="outline-text-2" id="text-org58885f5">
 </div>
 </section>
-<section id="slide-org49fcaa6">
-<h3 id="org49fcaa6">Python as a calculator</h3>
+<section id="slide-org2b920c6">
+<h3 id="org2b920c6">Python as a calculator</h3>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe allow="autoplay; fullscreen" height="270" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=27975&amp;code=cT~vMz3yrmbyrdbJIeIFQD0suvO7UER" frameborder="0" allowfullscreen></iframe>
+<!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
 <!---video height="500" controls>
 <source  src="../recordings/python-calculator.mp4" type="video/mp4">
 </video--->
@@ -201,8 +202,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org32664f4">
-<h3 id="org32664f4">variables</h3>
+<section id="slide-org5857e1e">
+<h3 id="org5857e1e">variables</h3>
 <ul>
 <li>integers</li>
 <li>floats</li>
@@ -213,8 +214,8 @@ for more details.
 </ul>
 
 </section>
-<section id="slide-org10c567f">
-<h3 id="org10c567f">Example using variables</h3>
+<section id="slide-org70d61b6">
+<h3 id="org70d61b6">Example using variables</h3>
 <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <!---video height="500" controls>
@@ -232,11 +233,11 @@ for more details.
 
 
 </section>
-<section id="slide-org948998c">
-<h3 id="org948998c">Strings</h3>
+<section id="slide-org8bc8b8f">
+<h3 id="org8bc8b8f">Strings</h3>
 </section>
-<section id="slide-orge1408b7">
-<h3 id="orge1408b7">printing</h3>
+<section id="slide-orgafda1b6">
+<h3 id="orgafda1b6">printing</h3>
 <p>
 print('Hello')
 </p>
@@ -246,8 +247,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org4fccf1c">
-<h3 id="org4fccf1c">Lists</h3>
+<section id="slide-orgc424cd0">
+<h3 id="orgc424cd0">Lists</h3>
 <ul>
 <li>comprehensions</li>
 <li>indexing
@@ -287,8 +288,8 @@ x_list.append(137.0)
 </div>
 
 </section>
-<section id="slide-org58260e7">
-<h3 id="org58260e7">Dictionaries</h3>
+<section id="slide-org2bb47a3">
+<h3 id="org2bb47a3">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -298,8 +299,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org3d5e2e7">
-<h3 id="org3d5e2e7">loops</h3>
+<section id="slide-org9f109f5">
+<h3 id="org9f109f5">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
@@ -307,8 +308,8 @@ repetitive tasks.
 
 
 </section>
-<section id="slide-org12362ce">
-<h3 id="org12362ce">Functions</h3>
+<section id="slide-org9cfbbc6">
+<h3 id="org9cfbbc6">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -318,8 +319,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org640fc33">
-<h3 id="org640fc33">Conditionals</h3>
+<section id="slide-org604adb2">
+<h3 id="org604adb2">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -330,8 +331,8 @@ for more details.
 
 
 </section>
-<section id="slide-org1ef8f98">
-<h3 id="org1ef8f98">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-org8e13bd7">
+<h3 id="org8e13bd7">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -406,8 +407,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-org0a845a4">
-<h2 id="org0a845a4">Importing libraries</h2>
+<section id="slide-org13013f0">
+<h2 id="org13013f0">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -434,8 +435,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-orgb4e9f74">
-<h3 id="orgb4e9f74">numpy</h3>
+<section id="slide-org0d51d44">
+<h3 id="org0d51d44">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -466,8 +467,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org90c9486">
-<h3 id="org90c9486">importing numpy</h3>
+<section id="slide-org1847943">
+<h3 id="org1847943">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -495,8 +496,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-orgaa74289">
-<h3 id="orgaa74289">matplotlib / pylab</h3>
+<section id="slide-orge5a3b76">
+<h3 id="orge5a3b76">matplotlib / pylab</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -519,8 +520,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org8cc7aa4">
-<h3 id="org8cc7aa4">scipy</h3>
+<section id="slide-org2971b92">
+<h3 id="org2971b92">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -531,8 +532,8 @@ nil
 
 
 </section>
-<section id="slide-org3ab8a9a">
-<h3 id="org3ab8a9a">sympy</h3>
+<section id="slide-org5c8c2ea">
+<h3 id="org5c8c2ea">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -547,8 +548,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org4097f3b">
-<h3 id="org4097f3b">sympy</h3>
+<section id="slide-org36a4bb8">
+<h3 id="org36a4bb8">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -561,16 +562,16 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org583a5cb">
-<h2 id="org583a5cb">Further resources</h2>
+<section id="slide-orgb6237a4">
+<h2 id="orgb6237a4">Further resources</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-org69b025a">
-<h2 id="org69b025a">Summary</h2>
+<section id="slide-org04b2f36">
+<h2 id="org04b2f36">Summary</h2>
 </section>
 </section>
 </div>
@@ -592,7 +593,7 @@ multiplex: {
 // Optional libraries used to extend on reveal.js
 dependencies: [
 ]
-,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Plugins', icon: '<i class="fa fa-external-link-alt"></i>', src: 'toc.html' }, { title: 'About', icon: '<i class="fa fa-info"></i>', src: 'about.html' } ] }, chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'python/', suffix: '.ogg', textToSpeechURL: "http://api.voicerss.org/?key=f6810d3ff6e84980b30a10c447b36003&hl=eng-us&c=ogg&src=", defaultNotes: true, defaultText: false, advance: 0, autoplay: false, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
+,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Plugins', icon: '<i class="fa fa-external-link-alt"></i>', src: 'toc.html' }, { title: 'About', icon: '<i class="fa fa-info"></i>', src: 'about.html' } ] }, chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'python/', suffix: '.ogg', textToSpeechURL: "http://api.voicerss.org/?key=f6810d3ff6e84980b30a10c447b36003&hl=eng-us&c=ogg&src=", defaultNotes: true, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
 </script>
 </body>
 </html>
