modifying size of video

--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -46,8 +46,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgac5ac22">
-<h2 id="orgac5ac22">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orga280e4f">
+<h2 id="orga280e4f">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -140,8 +140,8 @@ to as far you want to go.
 </section>
 </section>
 <section>
-<section id="slide-orgb5afb0a">
-<h2 id="orgb5afb0a">Overview</h2>
+<section id="slide-orgee0b74b">
+<h2 id="orgee0b74b">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -150,16 +150,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org5cc0572">
-<h3 id="org5cc0572">Python</h3>
+<section id="slide-org01850da">
+<h3 id="org01850da">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org6cc7e29">
-<h3 id="org6cc7e29">Jupyter notebooks</h3>
+<section id="slide-org538f464">
+<h3 id="org538f464">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -172,21 +172,21 @@ We will implement this using Jupyter notebooks.
 </aside>
 
 </section>
-<section id="slide-org3f15bb4">
-<h3 id="org3f15bb4">Installation</h3>
+<section id="slide-org1323287">
+<h3 id="org1323287">Installation</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org58885f5">
-<h2 id="org58885f5">Basics</h2>
-<div class="outline-text-2" id="text-org58885f5">
+<section id="slide-orgcefb91e">
+<h2 id="orgcefb91e">Basics</h2>
+<div class="outline-text-2" id="text-orgcefb91e">
 </div>
 </section>
-<section id="slide-org2b920c6">
-<h3 id="org2b920c6">Python as a calculator</h3>
+<section id="slide-org3792fc9">
+<h3 id="org3792fc9">Python as a calculator</h3>
 <div>
-<iframe allow="autoplay; fullscreen" height="270" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=27975&amp;code=cT~vMz3yrmbyrdbJIeIFQD0suvO7UER" frameborder="0" allowfullscreen></iframe>
+<iframe allow="autoplay; fullscreen" height="606" width="1000" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=27975&amp;code=cT~vMz3yrmbyrdbJIeIFQD0suvO7UER" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
 <!---video height="500" controls>
 <source  src="../recordings/python-calculator.mp4" type="video/mp4">
@@ -201,9 +201,21 @@ Jupyter notebook
 for more details.
 </div>
 
+<aside class="notes">
+<p>
+
+</p>
+
+<ul>
+<li><a href="https://ls-video2.ces.strath.ac.uk/View.aspx?id=27975~5r~Ly8ewrg5bK">https://ls-video2.ces.strath.ac.uk/View.aspx?id=27975~5r~Ly8ewrg5bK</a></li>
+
+</ul>
+
+</aside>
+
 </section>
-<section id="slide-org5857e1e">
-<h3 id="org5857e1e">variables</h3>
+<section id="slide-orgaf7bbae">
+<h3 id="orgaf7bbae">variables</h3>
 <ul>
 <li>integers</li>
 <li>floats</li>
@@ -214,8 +226,8 @@ for more details.
 </ul>
 
 </section>
-<section id="slide-org70d61b6">
-<h3 id="org70d61b6">Example using variables</h3>
+<section id="slide-org666633c">
+<h3 id="org666633c">Example using variables</h3>
 <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <!---video height="500" controls>
@@ -233,11 +245,11 @@ for more details.
 
 
 </section>
-<section id="slide-org8bc8b8f">
-<h3 id="org8bc8b8f">Strings</h3>
+<section id="slide-orgad527d9">
+<h3 id="orgad527d9">Strings</h3>
 </section>
-<section id="slide-orgafda1b6">
-<h3 id="orgafda1b6">printing</h3>
+<section id="slide-org6daefc5">
+<h3 id="org6daefc5">printing</h3>
 <p>
 print('Hello')
 </p>
@@ -247,8 +259,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgc424cd0">
-<h3 id="orgc424cd0">Lists</h3>
+<section id="slide-org06f9a50">
+<h3 id="org06f9a50">Lists</h3>
 <ul>
 <li>comprehensions</li>
 <li>indexing
@@ -288,8 +300,8 @@ x_list.append(137.0)
 </div>
 
 </section>
-<section id="slide-org2bb47a3">
-<h3 id="org2bb47a3">Dictionaries</h3>
+<section id="slide-orga0c82eb">
+<h3 id="orga0c82eb">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -299,8 +311,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org9f109f5">
-<h3 id="org9f109f5">loops</h3>
+<section id="slide-org2c14dfa">
+<h3 id="org2c14dfa">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
@@ -308,8 +320,8 @@ repetitive tasks.
 
 
 </section>
-<section id="slide-org9cfbbc6">
-<h3 id="org9cfbbc6">Functions</h3>
+<section id="slide-orgf9f634b">
+<h3 id="orgf9f634b">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -319,8 +331,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-org604adb2">
-<h3 id="org604adb2">Conditionals</h3>
+<section id="slide-org9072315">
+<h3 id="org9072315">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -331,8 +343,8 @@ for more details.
 
 
 </section>
-<section id="slide-org8e13bd7">
-<h3 id="org8e13bd7">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-orgccdc6d9">
+<h3 id="orgccdc6d9">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -407,8 +419,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-org13013f0">
-<h2 id="org13013f0">Importing libraries</h2>
+<section id="slide-orgc7a7756">
+<h2 id="orgc7a7756">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -435,8 +447,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org0d51d44">
-<h3 id="org0d51d44">numpy</h3>
+<section id="slide-org3a4ef54">
+<h3 id="org3a4ef54">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -467,8 +479,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org1847943">
-<h3 id="org1847943">importing numpy</h3>
+<section id="slide-org424c1e1">
+<h3 id="org424c1e1">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -496,8 +508,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-orge5a3b76">
-<h3 id="orge5a3b76">matplotlib / pylab</h3>
+<section id="slide-org949bc80">
+<h3 id="org949bc80">matplotlib / pylab</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -520,8 +532,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org2971b92">
-<h3 id="org2971b92">scipy</h3>
+<section id="slide-org75d9a33">
+<h3 id="org75d9a33">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -532,8 +544,8 @@ nil
 
 
 </section>
-<section id="slide-org5c8c2ea">
-<h3 id="org5c8c2ea">sympy</h3>
+<section id="slide-org499b695">
+<h3 id="org499b695">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -548,8 +560,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org36a4bb8">
-<h3 id="org36a4bb8">sympy</h3>
+<section id="slide-orgf422667">
+<h3 id="orgf422667">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -562,16 +574,16 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgb6237a4">
-<h2 id="orgb6237a4">Further resources</h2>
+<section id="slide-orgf081a7d">
+<h2 id="orgf081a7d">Further resources</h2>
 
 
 
 </section>
 </section>
 <section>
-<section id="slide-org04b2f36">
-<h2 id="org04b2f36">Summary</h2>
+<section id="slide-orge1a2e14">
+<h2 id="orge1a2e14">Summary</h2>
 </section>
 </section>
 </div>
