--- a/slides/index.html
+++ b/slides/index.html
@@ -39,19 +39,20 @@
 
 
 <section>
-<section id="slide-org2ec6221">
-<h2 id="org2ec6221">Module overview</h2>
+<section id="slide-org296f6ca">
+<h2 id="org296f6ca">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
-<li><a href="./python_notes.html">Introduction to Python</a></li>
-<li>Differential balances
+<li><a href="./intro_notes.html">Module overview</a>: week 0</li>
+<li><a href="./python_notes.html">Introduction to Python</a>: week 1</li>
+<li>Differential balances: weeks 2-4
 <ul>
 <li><a href="./mass_notes.html">Mass and species balances</a></li>
 <li><a href="./energy_notes.html">energy balances</a></li>
 <li><a href="./momentum_notes.html">Momentum/force balances</a></li>
 
 </ul></li>
-<li>Ordinary differential equations</li>
-<li>Multivariate calculus</li>
+<li>Ordinary differential equations: weeks 5-8</li>
+<li>Multivariate calculus: weeks 9-10</li>
 
 </ul>
 </section>
