--- a/slides/index.html
+++ b/slides/index.html
@@ -39,10 +39,10 @@
 
 
 <section>
-<section id="slide-org296f6ca">
-<h2 id="org296f6ca">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-org85eb184">
+<h2 id="org85eb184">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
-<li><a href="./intro_notes.html">Module overview</a>: week 0</li>
+<li><a href="./intro_notes-2020.html">Module overview</a>: week 0</li>
 <li><a href="./python_notes.html">Introduction to Python</a>: week 1</li>
 <li>Differential balances: weeks 2-4
 <ul>
