--- a/slides/index.html
+++ b/slides/index.html
@@ -39,8 +39,8 @@
 
 
 <section>
-<section id="slide-org85eb184">
-<h2 id="org85eb184">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-org67e8594">
+<h2 id="org67e8594">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
 <li><a href="./intro_notes-2020.html">Module overview</a>: week 0</li>
 <li><a href="./python_notes.html">Introduction to Python</a>: week 1</li>
@@ -51,8 +51,8 @@
 <li><a href="./momentum_notes.html">Momentum/force balances</a></li>
 
 </ul></li>
-<li>Ordinary differential equations: weeks 5-8</li>
-<li>Multivariate calculus: weeks 9-10</li>
+<li><a href="./ode_notes.html">Ordinary differential equations</a>: weeks 5-8</li>
+<li><a href="./multivariate_notes.html">Multivariate calculus</a>: weeks 9-10</li>
 
 </ul>
 </section>
